[package]
name = "egui_nodes"
version = "0.1.4"
authors = ["Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Egui port of https://github.com/Nelarius/imnodes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.16"
derivative = "2.2.0"

[dev-dependencies]
eframe = { version = "0.16", default-features = false, features = ["default_fonts", "egui_glow"] }

[patch.crates-io]
egui = { git = "https://github.com/simmsb/egui", rev = "e4e183e7526f2d29e4af316425afd73d2f7e8bb8" }
eframe = { git = "https://github.com/simmsb/egui", rev = "e4e183e7526f2d29e4af316425afd73d2f7e8bb8" }
epi = { git = "https://github.com/simmsb/egui", rev = "e4e183e7526f2d29e4af316425afd73d2f7e8bb8" }
egui_glow = { git = "https://github.com/simmsb/egui", rev = "e4e183e7526f2d29e4af316425afd73d2f7e8bb8" }
