[package]
name = "egui_nodes"
version = "0.1.4"
authors = ["Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Egui port of https://github.com/Nelarius/imnodes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.17"
derivative = "2.2.0"

[dev-dependencies]

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", rev = "c8371f92c0e3820b833cc917e8f333c08364ebd3" }
